updated date functionality

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">95,299</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test_Chrome</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">44,150</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC_001_Cab_Booking</td><td><a href="#m0">verifyMinimumPrice</a></td><td rowspan="1">1726794945104</td><td rowspan="1">43219</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC_001_Cab_Booking</td><td><a href="#m0">verifyMinimumPrice</a></td><td rowspan="1">1727049387731</td><td rowspan="1">24870</td></tr><tr class="passedodd"><td rowspan="1">testCases.TC_002_Gift_Selection</td><td><a href="#m1">verifyGiftErrorMessage</a></td><td rowspan="1">1727049391523</td><td rowspan="1">15386</td></tr><tr class="passedeven"><td rowspan="1">testCases.TC_003_Hotel_Booking</td><td><a href="#m2">getAdultsCount</a></td><td rowspan="1">1727049384772</td><td rowspan="1">15172</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.TC_001_Cab_Booking#verifyMinimumPrice</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>Delhi</td><td>Manali</td><td>Sat Sep 21 2024</td><td>07  Hr</td><td>10  min</td><td>PM</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test_Chrome</h2><h3 id="m0">testCases.TC_001_Cab_Booking#verifyMinimumPrice</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>Delhi</td><td>Manali</td><td>Fri Nov 01 2024</td><td>09  Hr</td><td>10  min</td><td>PM</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.TC_002_Gift_Selection#verifyGiftErrorMessage</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>2000</td><td>Sham</td><td>9900443322</td><td>sssdd</td><td>5</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.TC_003_Hotel_Booking#getAdultsCount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
